# CORM

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  corm.pc.in  cormConfig.cmake.in
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md
docs/superpowers/plans/: 2026-07-22-corm-database-adapter.md  2026-07-23-corm-long-term-optimization.md  2026-07-23-corm-phase2-enhancements.md  2026-07-23-corm-phase3-advanced-features.md  2026-07-23-corm-systemic-optimization.md  2026-07-24-corm-bugfixes.md  2026-07-24-corm-migration-enhance.md  2026-07-24-corm-pool-and-batch.md
examples/: basic.c  mysql_example.c  sqlite_full.c
include/corm/: backend.h  config.h  corm.h  dialect.h  model.h  pool.h  query.h  result.h  types.h
src/: builder.c  corm.c  corm_pub.h  dialect.c  migration.c  model.c  query.c  result.c  stmt.c  test_include.h
src/backend/: backend.c  mysql.c  postgres.c  sqlite3.c
src/internal/: corm_internal.h  hash.h  list.h  pool.c  pool.h  stmt_cache.c  stmt_cache.h  strbuf.h
tests/: test_backend_drivers.c  test_core.c  test_corm_api.c  test_full_hooks.c  test_hooks.c  test_logger.c  test_migration.c  test_model.c  test_pool.c  test_predicates.c  test_preload.c  test_query.c  test_soft_delete.c  test_sqlite.c  test_stmt_cache.c
